# MGEx

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: auto-build.yml
.github/workflows/scripts/: setup-toolchains.sh
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
cmake/.cache/clangd/index/: Ast.cpp.A0F5E914F5401A28.idx  Ast.h.BD1C0B7C03E72C12.idx  BuiltinFolding.cpp.2A53CEBA1EDBA0FD.idx  BuiltinFolding.h.C939A6DAED1A2C9B.idx  Builtins.cpp.8B690D94819B7DD4.idx  Builtins.h.26D408F5936C58E2.idx  Bytecode.h.2F124AAEB82BBD9F.idx  BytecodeBuilder.cpp.F049ED5F396F13FF.idx  BytecodeBuilder.h.CEA69632067702F1.idx  BytecodeUtils.h.574B1D4CEE2DED31.idx  Common.h.4A7A4B0DC12BCE7A.idx  Compiler.cpp.5AA0A861184889BC.idx  Compiler.h.4DA24496B9CEF53D.idx  Confusables.cpp.3622C5C168DB176F.idx  Confusables.h.EC13EB7F5A32C312.idx  ConstantFolding.cpp.36A324E13C6D2830.idx  ConstantFolding.h.8BA98E4379C56A01.idx  CostModel.cpp.6A20CC3EBEA1CB51.idx  CostModel.h.32807F7D9E870F74.idx  DenseHash.h.5211AB662D9BE0B2.idx  Lexer.cpp.ABD025D7293F9F24.idx  Lexer.h.5CB24C7A04BA39DA.idx  Location.cpp.D8DF2AA844347126.idx  Location.h.C0DE630598744495.idx  ParseOptions.h.BD974008DC69F537.idx  ParseResult.h.E16AD61FA2BEA91A.idx  Parser.cpp.77E59C7075DC23DB.idx  Parser.h.8A4EFA6988A2211F.idx  StringUtils.cpp.8DE82B200ED17426.idx  StringUtils.h.554EB56D05B96D56.idx  TableShape.cpp.1DB2927BE2CCC723.idx  TableShape.h.773DA6C48EFFAE9C.idx  TimeTrace.cpp.917EB9297E634BE2.idx  TimeTrace.h.6BECD660BC5EE0BF.idx  Types.cpp.CC8C0A6957AF86A5.idx  Types.h.F5211F96284B85FB.idx  ValueTracking.cpp.583C2D2B30B24469.idx  ValueTracking.h.F5AA6DDB6A2DFC0A.idx  addresses.cpp.3CE2609526078F4B.idx  addresses.h.7E6C5C13EC9BE483.idx  (+67 more)
cmake/executor/: Makefile  cmake_install.cmake
cmake/roblox/: Makefile  cmake_install.cmake
cmake/utils/: Makefile  cmake_install.cmake
executor/: CMakeLists.txt
executor/Execution/include/: execution.h
executor/Execution/src/: execution.cpp  lua_execution.cpp  thread_execution.cpp
executor/include/: executor.h
executor/src/: executor.cpp
roblox/: CMakeLists.txt
roblox/Addresses/include/: addresses.h
roblox/Addresses/src/: addresses.cpp
roblox/Hooks/include/: hooks.h
roblox/Hooks/src/: hooks.cpp
roblox/TaskScheduler/include/: taskscheduler.h
roblox/TaskScheduler/src/: taskscheduler.cpp
utils/: CMakeLists.txt
utils/include/: log.h  obfuscate.h  utils.h
